--- a/Rapport 2/scripts/tables/uncertainhulta.tex
+++ b/Rapport 2/scripts/tables/uncertainhulta.tex
@@ -2,17 +2,17 @@
 \hline
  & $x$ & $\delta x$ \\
 \hline
-$l_a$                 & $119.5cm$ &    \\             
-$l_b$                 & $119.6cm$ &    \\        
-$dl_s$                &     & $1.4mm$   \\             
-$\sqrt{n}\cdot dl_l$  &     & $0.5\sqrt{5}mm$   \\                  
-$dl_m$                &     & $1.4mm$   \\                  
-$\alpha l_a (T-25C)$  & $-0.156cm$ & $\sim 10^{-6}$   \\ 
+$l_a$                 & $119.5$cm &    \\             
+$l_b$                 & $119.6$cm &    \\        
+$dl_s$                &     & $1.4$mm   \\             
+$\sqrt{n}\cdot dl_l$  &     & $0.5\sqrt{5}$mm   \\                  
+$dl_m$                &     & $1.4$mm   \\                  
+$\alpha l_a (T-25C)$  & $-0.156$cm & $\sim 10^{-6}$mm   \\ 
 \hline                
 
 \end{tabular}
 
-\begin{tabular}{| p{60} | l | l |}
+\begin{tabular}{| l | l | l |}
 \hline
 & $\sum x_i$ & $\sqrt {\sum \sigma x_i^2 }$ \\
 \hline
