--- a/Rapport 2/scripts/tables/lendat2.tex
+++ b/Rapport 2/scripts/tables/lendat2.tex
@@ -1,9 +1,10 @@
 \begin{tabular}{| l | l | l | l | l | l | l | l | l | l |}
 \hline
-    -  & $\bar{l_{a}}$ & $\sigma_a$ & $\sigma_{m, a}$ & $\bar{l_{b}}$ & $\sigma_b$ & $\sigma_{m, b}$ & $\bar{l_{ab}}$ & $\sigma_{ab}$ & $\sigma_{m, ab}$ \\ \hline
+    -  & $\bar{l_{a}}$[cm] & $\sigma_a$ & $\sigma_{m, a}$& $\bar{l_{b}}$[cm] & $\sigma_b$ & $\sigma_{m, b}$ & $\bar{l_{ab}}$[cm] & $\sigma_{ab}$ & $\sigma_{m, ab}$ \\ \hline
 
-    Ruler  & $\bar{l_{a}}$ & $\sigma_a$ & $\sigma_{m, a}$ & $\bar{l_{b}}$ & $\sigma_b$ & $\sigma_{m, b}$ & $\bar{l_{ab}}$ & $\sigma_{ab}$ & $\sigma_{m, ab}$ \\ \hline
+    Ruler  & 119.44 & 0.04 & 0.01 & 119.58 & 0.06 & 0.02 & 0.15 & 0.05 & 0.01 \\ \hline
 
-    Laser  & $\bar{l_{a}}$ & $\sigma_a$ & $\sigma_{m, a}$ & $\bar{l_{b}}$ & $\sigma_b$ & $\sigma_{m, b}$ & $\bar{l_{ab}}$ & $\sigma_{ab}$ & $\sigma_{m, ab}$ \\ \hline
+    Laser  & 120.89 & 3.66 & 1.22 & 120.94 & 3.49 & 1.16 & 0.18 & 0.10 & 0.03 \\ \hline
 
+    Vernier Calliper  & - & - & - & - & -& - & 0.149 & 0.026 & 0.011 \\ \hline
 \end{tabular}
