--- a/Rapport 2/rapport2_LHA_standard.tex
+++ b/Rapport 2/rapport2_LHA_standard.tex
@@ -216,7 +216,7 @@
       \end{split}
     \end{align}
 
-    Where $h_{F, t}, h_{F, b}$ in Eqn. \ref{eqn:pend_height} denote the distance measured from the floor to the top and bottom of the Focault pendulum respectively. These readings imply that the center of mass, $h_{F, cm} = 18cm \pm \delta h_{F, cm}$, where $\delta h_{F, cm}$ is a potentially large error of unknown size due to systematic faults in our procedure. More on this in the discussion.
+    Where $h_{F, t}, h_{F, b}$ in Eqn. \ref{eqn:pend_height} denote the distance measured from the floor to the top and bottom of the Foucault pendulum respectively. These readings imply that the center of mass, $h_{F, cm} = 18cm \pm \delta h_{F, cm}$, where $\delta h_{F, cm}$ is a potentially large error of unknown size due to systematic faults in our procedure. More on this in the discussion.
     \newline
     \newline
     The height of the ceiling was measured using the Bosch PLR30 to be $H_C = 13.878m \pm 0.003$.
