--- a/Rapport 3/rapport3_ref.bib
+++ b/Rapport 3/rapport3_ref.bib
@@ -22,9 +22,13 @@
   YEAR =         {1998},
 }
 
-@MISC{g_Wik,
-  TITLE =        {Wikipedia,http://no.wikipedia.org/wiki/Tyngdeakselerasjon},
-}
+@misc{ wiki:euler_bernouli,
+    author = "Wikipedia contributors",
+    title = "Euler–Bernoulli beam theory --- Wikipedia{,} The Free Encyclopedia",
+    year = "2018",
+    url = "\url{https://en.wikipedia.org/w/index.php?title=Euler%E2%80%93Bernoulli_beam_theory&oldid=833340737}",
+    note = "[Online; accessed 31-March-2018]"
+  }
 
 @BOOK{squires,
   AUTHOR =       {G. L. Squires},
